# gemini-hackathon

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  config.py  crud.py  database.py  gemini_service.py  main.py  models.py  pyproject.toml
docs/: fork-plan.md
frontend/: .dockerignore  App.tsx  Dockerfile  index.html  index.tsx  metadata.json  package-lock.json  package.json  types.ts  vite.config.ts  vitest.config.ts
frontend/components/: ComicPanel.tsx  GalleryPage.tsx  KidWizard.tsx  MagicLoader.tsx  MainPage.tsx  StorageImage.tsx
frontend/components/design-system/: Forms.tsx  Icons.tsx  Primitives.tsx  Typography.tsx  index.ts
frontend/hooks/: useStoryGenerator.ts
frontend/services/: backendApi.ts
